RESOLVED FIXED130328
Fix the !ENABLE(PROMISES) build
https://bugs.webkit.org/show_bug.cgi?id=130328
Summary Fix the !ENABLE(PROMISES) build
Zsolt Borbely
Reported 2014-03-17 05:49:41 PDT
Tested on r165729: $ Tools/Scripts/build-webkit --efl --no-promises build log: /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp: In static member function 'static JSC::JSPromiseDeferred* JSC::JSPromiseDeferred::create(JSC::ExecState*, JSC::JSGlobalObject*)': /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:45:79: error: 'createDeferredConstructionFunction' was not declared in this scope /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:47:5: error: 'JSPromise' was not declared in this scope /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:47:71: error: 'constructPromise' was not declared in this scope /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:51:66: error: no matching function for call to 'JSC::JSPromiseDeferred::create(JSC::VM&, <unresolved overloaded function type>, JSC::JSValue&, JSC::JSValue&)' /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:51:66: note: candidates are: /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:41:20: note: static JSC::JSPromiseDeferred* JSC::JSPromiseDeferred::create(JSC::ExecState*, JSC::JSGlobalObject*) /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:41:20: note: candidate expects 2 arguments, 4 provided In file included from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:27:0: /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.h:39:31: note: static JSC::JSPromiseDeferred* JSC::JSPromiseDeferred::create(JSC::VM&, JSC::JSObject*, JSC::JSValue, JSC::JSValue) /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.h:39:31: note: no known conversion for argument 2 from '<unresolved overloaded function type>' to 'JSC::JSObject*' /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp: In function 'JSC::JSValue JSC::createJSPromiseDeferredFromConstructor(JSC::ExecState*, JSC::JSValue)': /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:104:94: error: 'createDeferredConstructionFunction' was not declared in this scope /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp: In static member function 'static JSC::JSPromiseDeferred* JSC::JSPromiseDeferred::create(JSC::ExecState*, JSC::JSGlobalObject*)': /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSPromiseDeferred.cpp:52:1: error: control reaches end of non-void function [-Werror=return-type] cc1plus: all warnings being treated as errors ICECC[11086] 04:20:41: Compiled on 10.6.11.36 make[2]: *** [Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/runtime/JSPromiseDeferred.cpp.o] Error 1 make[2]: *** Waiting for unfinished jobs.... /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp: In member function 'void JSC::JSGlobalObject::reset(JSC::JSValue)': /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:392:40: error: incomplete type 'JSC::JSPromiseConstructor' used in nested name specifier /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:392:73: error: incomplete type 'JSC::JSPromiseConstructor' used in nested name specifier /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:412:99: error: no matching function for call to 'JSC::JSGlobalObject::putDirectWithoutTransition(JSC::VM&, const JSC::Identifier&, JSC::JSPromiseConstructor*, JSC::Attribute)' /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:412:99: note: candidate is: In file included from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSArray.h:26:0, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/bytecode/ArrayAllocationProfile.h:30, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.h:25, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:31: /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSObject.h:1458:13: note: void JSC::JSObject::putDirectWithoutTransition(JSC::VM&, JSC::PropertyName, JSC::JSValue, unsigned int) /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSObject.h:1458:13: note: no known conversion for argument 3 from 'JSC::JSPromiseConstructor*' to 'JSC::JSValue' In file included from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSCInlines.h:50:0, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:64: /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitorInlines.h: In instantiation of 'void JSC::SlotVisitor::append(JSC::WriteBarrierBase<T>*) [with T = JSC::JSPromiseConstructor]': /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:639:53: required from here /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitorInlines.h:137:5: error: no matching function for call to 'JSC::SlotVisitor::internalAppend(JSC::WriteBarrierBase<JSC::JSPromiseConstructor>*&, JSC::JSPromiseConstructor*&)' /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitorInlines.h:137:5: note: candidates are: /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitorInlines.h:98:48: note: void JSC::SlotVisitor::internalAppend(void*, JSC::JSCell*) /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitorInlines.h:98:48: note: no known conversion for argument 2 from 'JSC::JSPromiseConstructor*' to 'JSC::JSCell*' /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitorInlines.h:91:48: note: void JSC::SlotVisitor::internalAppend(void*, JSC::JSValue) /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitorInlines.h:91:48: note: no known conversion for argument 2 from 'JSC::JSPromiseConstructor*' to 'JSC::JSValue' In file included from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/Heap.h:40:0, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/WriteBarrier.h:31, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/PropertyStorage.h:29, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/IndexingHeader.h:29, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/ArrayConventions.h:24, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSArray.h:24, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/bytecode/ArrayAllocationProfile.h:30, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.h:25, from /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/runtime/JSGlobalObject.cpp:31: /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitor.h:128:10: note: void JSC::SlotVisitor::internalAppend(void*, JSC::JSValue*) /home/bzsolt/webkit/EflWebKit/Source/JavaScriptCore/heap/SlotVisitor.h:128:10: note: no known conversion for argument 2 from 'JSC::JSPromiseConstructor*' to 'JSC::JSValue*' ICECC[11003] 04:20:44: Compiled on 10.6.1.14 make[2]: *** [Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/runtime/JSGlobalObject.cpp.o] Error 1 make[1]: *** [Source/JavaScriptCore/CMakeFiles/JavaScriptCore.dir/all] Error 2 make: *** [all] Error 2 Reason: Missing PROMISES guards.
Attachments
Proposed patch (10.79 KB, patch)
2014-03-17 05:52 PDT, Zsolt Borbely
no flags
Zsolt Borbely
Comment 1 2014-03-17 05:52:02 PDT
Created attachment 226904 [details] Proposed patch
WebKit Commit Bot
Comment 2 2014-03-17 10:29:33 PDT
Comment on attachment 226904 [details] Proposed patch Clearing flags on attachment: 226904 Committed r165741: <http://trac.webkit.org/changeset/165741>
WebKit Commit Bot
Comment 3 2014-03-17 10:29:36 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.