Fix the !ENABLE(PROMISES) build https://bugs.webkit.org/show_bug.cgi?id=130328

Patch by Zsolt Borbely <borbezs@inf.u-szeged.hu> on 2014-03-17
Reviewed by Darin Adler.

Add missing ENABLE(PROMISES) guards.

Source/JavaScriptCore:

* runtime/JSGlobalObject.cpp:
(JSC::JSGlobalObject::reset):
(JSC::JSGlobalObject::visitChildren):
* runtime/JSGlobalObject.h:
* runtime/JSPromiseDeferred.cpp:
* runtime/JSPromiseDeferred.h:
* runtime/JSPromiseReaction.cpp:
* runtime/JSPromiseReaction.h:
* runtime/VM.cpp:
(JSC::VM::VM):
* runtime/VM.h:

Source/WebCore:

* bindings/js/JSDOMPromise.cpp:
* bindings/js/JSDOMPromise.h:

Canonical link: https://commits.webkit.org/148322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@165741 268f45cc-cd09-0410-ab3c-d52691b4dbfc