Source/JavaScriptCore/runtime/JSPromiseDeferred.h
@@ -26,6 +26,8 @@
 #ifndef JSPromiseDeferred_h
 #define JSPromiseDeferred_h
 
+#if ENABLE(PROMISES)
+
 #include "JSCell.h"
 #include "Structure.h"
 
@@ -76,5 +78,7 @@ void performDeferredReject(ExecState*, JSPromiseDeferred*, JSValue argument);
 JSValue abruptRejection(ExecState*, JSPromiseDeferred*);
 
 } // namespace JSC
+
+#endif // ENABLE(PROMISES)
 
 #endif // JSPromiseDeferred_h
