Source/JavaScriptCore/runtime/JSPromiseReaction.h
@@ -26,6 +26,8 @@
 #ifndef JSPromiseReaction_h
 #define JSPromiseReaction_h
 
+#if ENABLE(PROMISES)
+
 #include "JSCell.h"
 #include "Structure.h"
 
@@ -64,5 +66,7 @@ private:
 PassRefPtr<Microtask> createExecutePromiseReactionMicrotask(VM&, JSPromiseReaction*, JSValue);
 
 } // namespace JSC
+
+#endif // ENABLE(PROMISES)
 
 #endif // JSPromiseReaction_h
